bugfix: uneven menu items

--- a/blocks/menu/__item/menu__item.css
+++ b/blocks/menu/__item/menu__item.css
@@ -2,7 +2,6 @@
   margin: 0 15px;
   content: "\2022";
   color: #FDCB6E;
-  font-size: 18px;
 }
 
 .menu__item:last-of-type::after {
